--- a/src/app/hrm-report/components/hrm-report/hrm-report.component.css
+++ b/src/app/hrm-report/components/hrm-report/hrm-report.component.css
@@ -31,9 +31,7 @@ section .block select{
     width: 100%;
     height: 1.5rem;
 }
-h3{
-    color:rgb(0, 162, 255);
-}
+
 /* main */
 .main{
    display: flex;
@@ -80,19 +78,14 @@ h3{
     justify-content: center;
    align-items: center;
 }
-.main .block .level h3{
-    text-align: center;
-    /* color:#a5cca7; */
-    font-weight: 700;
-    margin-bottom: 0;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.table{
+    width:140px;
+    height: 12rem;
 }
-.main .block .percent h4{
-    text-align: center;
-    /* color:#a5cca7; */
-    font-weight: 600;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.table .tr{
+    height: 2rem;
 }
+
 .line h5{
     color: rgb(2, 2, 2);
 }
